--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,13 @@
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
     "@tailwindcss/vite": "^4.0.12",
+    "firebase": "^12.7.0",
     "framer-motion": "^12.4.10",
+    "lucide-react": "^0.562.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.5",
+    "recharts": "^3.6.0",
     "tailwindcss": "^4.0.12"
   },
   "devDependencies": {
@@ -32,6 +35,7 @@
     "globals": "^15.14.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.18.2",
-    "vite": "^6.0.5"
+    "vite": "^6.0.5",
+    "vite-plugin-svgr": "^4.5.0"
   }
 }
